Refactorizacion de relaciones